all pages link corrections

--- a/blog6.html
+++ b/blog6.html
@@ -160,7 +160,7 @@
                         <div class="mil-mb-60">
                             <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
                             <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
-                            <a href="team-single.html" class="mil-post-sm mil-mb-15">
+                            <a href="#." class="mil-post-sm mil-mb-15">
                                 <div class="mil-cover-frame"><img src="img/faces/1.jpg" alt="cover"></div>
                                 <div class="mil-description">
                                     <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
