--- a/careers.html
+++ b/careers.html
@@ -111,7 +111,7 @@
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="home-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="careers.html">Careers</a></li>
                     </ul>
                     <h2 class="mil-uppercase">Careers</h2>
@@ -485,7 +485,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide mil-slide-50">
 
-                            <a href="publication.html" class="mil-card">
+                            <a href="blog1.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog1.avif" alt="project">
                                 </div>
@@ -503,7 +503,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
+                            <a href="blog2.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Maximizing Engagement with Social Media Strategies</h4>
@@ -521,7 +521,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm">
+                            <a href="blog3.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog3.avif" alt="project">
                                 </div>
@@ -540,7 +540,7 @@
 
                         <div class="swiper-slide mil-slide-50">
 
-                            <a href="publication.html" class="mil-card">
+                            <a href="blog4.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog4.avif" alt="project">
                                 </div>
@@ -558,7 +558,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
+                            <a href="blog5.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Creating Buzz: The Art of Event Promotion</h4>
@@ -577,7 +577,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm">
+                            <a href="blog6.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog6.avif" alt="project">
                                 </div>
