--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
+                            <a href="project1.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/project1.jpg" alt="project">
                                 </div>
@@ -502,7 +502,7 @@
                         </div>
                         <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
+                            <a href="project2.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/project2.avif" alt="project">
                                 </div>
@@ -520,7 +520,7 @@
                         </div>
                         <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
+                            <a href="project3.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/project3.avif" alt="project">
                                 </div>
@@ -788,7 +788,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide mil-slide-50">
 
-                            <a href="publication.html" class="mil-card">
+                            <a href="blog1.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog1.avif" alt="project">
                                 </div>
@@ -806,7 +806,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
+                            <a href="blog2.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Maximizing Engagement with Social Media Strategies</h4>
@@ -824,7 +824,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm">
+                            <a href="blog3.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog3.avif" alt="project">
                                 </div>
@@ -843,7 +843,7 @@
 
                         <div class="swiper-slide mil-slide-50">
 
-                            <a href="publication.html" class="mil-card">
+                            <a href="blog4.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog4.avif" alt="project">
                                 </div>
@@ -861,7 +861,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
+                            <a href="blog5.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Creating Buzz: The Art of Event Promotion</h4>
@@ -880,7 +880,7 @@
                         </div>
                         <div class="swiper-slide mil-slide-25">
 
-                            <a href="publication.html" class="mil-card mil-card-sm">
+                            <a href="blog6.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
                                     <img src="img/images/blog6.avif" alt="project">
                                 </div>
