--- a/404.html
+++ b/404.html
@@ -122,7 +122,7 @@
 
                         <div class="mil-404-text">
                             <p class="mil-light-soft mil-mb-30">The page you are looking for does not exist; it may have been moved or removed altogether.</p>
-                            <a href="home-2.html" class="mil-button mil-border mil-light"><span>Back to homepage</span></a>
+                            <a href="index.html" class="mil-button mil-border mil-light"><span>Back to homepage</span></a>
                         </div>
 
                     </div>
