--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="home-1.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                     <h2 class="mil-uppercase">Let’s discuss your opportunity</h2>
