--- a/prices.html
+++ b/prices.html
@@ -110,7 +110,7 @@
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="home-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="prices.html">Pricing</a></li>
                     </ul>
                     <h2 class="mil-uppercase">Pricing and plans</h2>
