--- a/service-1.html
+++ b/service-1.html
@@ -111,7 +111,7 @@
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="home-1.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="service-1.html">Service</a></li>
                     </ul>
                     <h2 class="mil-uppercase">Services</h2>
