--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
-                    <a href="index.html" class="mil-logo" style="width: 140px"></a>
+                    <a href="index.html" class="mil-logo" style="width: 340px"></a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
@@ -88,11 +88,11 @@
                                 </li> -->
 
                             </ul>
-                            <div class="mil-search-icon">
+                            <!-- <div class="mil-search-icon">
                                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5848 19.7029C20.3908 19.8999 20.1358 19.997 19.8808 19.997C19.6268 19.997 19.3718 19.8999 19.1778 19.7029L15.5118 16.2199C13.9778 17.2549 12.3798 17.997 9.92584 17.997C4.98484 17.997 0.964844 13.959 0.964844 8.99695C0.964844 4.34995 4.98484 0.199951 9.92584 0.199951C14.8668 0.199951 18.8858 4.34995 18.8858 8.99695C18.8858 11.118 18.1468 13.68 16.9188 14.608L20.5848 18.29C20.9738 18.681 20.9738 19.3129 20.5848 19.7029ZM9.92584 1.99695C6.82984 1.99695 2.95684 5.13695 2.95684 8.99695C2.95684 12.857 6.82984 15.998 9.92584 15.998C11.8398 15.998 13.5758 15.217 14.8368 13.957C14.8408 13.952 14.8418 13.945 14.8468 13.941C14.8518 13.936 14.8578 13.935 14.8628 13.93C16.1168 12.663 16.8948 10.92 16.8948 8.99695C16.8948 5.13695 13.7678 1.99695 9.92584 1.99695Z" />
                                 </svg>
-                            </div>
+                            </div> -->
                         </nav>
 
                     </div>
@@ -635,7 +635,7 @@
 
                     </div>
                 </div>
-                <div class="row align-items-center">
+                <!-- <div class="row align-items-center">
                     <div class="col-md-6 col-xl-6">
 
                         <a href="#." class="mil-link mil-mb-30"><span>Learn More</span><i class="fas fa-arrow-right"></i></a>
@@ -648,7 +648,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- how it works end -->
@@ -750,7 +750,7 @@
                         </div>
                     </div>
         
-                    <a href="portfolio.html" class="mil-link mil-mb-30"><span>View All Services</span><i class="fas fa-arrow-right"></i></a>
+                    <a href="service-1.html" class="mil-link mil-mb-30"><span>View All Services</span><i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </section>
