--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
-                    <a href="index.html" class="mil-logo" style="width: 340px"></a>
+                    <a href="index.html" class="mil-logo">
+                        <img src="img/logo/navi-logo-light.jpg" alt="NaviPromotion Logo" style="width: 300px; height: 100px;" >
+                    </a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
