--- a/project1.html
+++ b/project1.html
@@ -140,7 +140,7 @@
                             <h6 class="mil-mb-15">Security & Surveillance</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Stack</p>
-                            <h6>HTML, CSS, JavaScript, Node.js, MongoDB</h6>
+                            <h6>HTML, CSS, JavaScript</h6>
 
                         </div>
 
