--- a/project2.html
+++ b/project2.html
@@ -137,10 +137,10 @@
                             <h6 class="mil-mb-15">Enterprise Software Development</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Industry</p>
-                            <h6 class="mil-mb-15">AI & Automation</h6>
+                            <h6 class="mil-mb-15">FRP / GRP</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Stack</p>
-                            <h6>React, Node.js, Express.js, MongoDB, AI/ML</h6>
+                            <h6>HTML , CSS , JavaScript </h6>
 
                         </div>
 
@@ -149,10 +149,10 @@
 
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Project Overview</span>
                         <h3 class="mil-mb-30">Challenge</h3>
-                        <p class="mil-mb-60">Xenex Technologies needed an advanced AI-powered enterprise software solution capable of automating business processes, enhancing data security, and improving operational efficiency. The challenge was to integrate AI/ML models seamlessly while ensuring scalability and high performance.</p>
+                        <p class="mil-mb-60">Xenex Technologies needed an advanced software solution capable of automating business processes, enhancing data security, and improving operational efficiency. The challenge was to integrate seamlessly while ensuring scalability and high performance.</p>
 
                         <h3 class="mil-mb-30">Our Solution</h3>
-                        <p class="mil-mb-60">We built a robust, AI-driven enterprise software solution that automates key business operations. The platform features intelligent automation, real-time analytics, and secure cloud hosting, enabling businesses to streamline workflows and enhance decision-making.</p>
+                        <p class="mil-mb-60">We built a robust, enterprise software solution that automates key business operations. The platform features intelligent automation, real-time analytics, and secure cloud hosting, enabling businesses to streamline workflows and enhance decision-making.</p>
 
                         <div class="row">
                             <div class="col-xl-6">
@@ -160,7 +160,7 @@
                                 <ul class="mil-check-icon-list mil-mb-15">
                                     <li>
                                         <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">AI-driven automation for business workflows.</span>
+                                        <span class="mil-dark">Automation for business workflows.</span>
                                     </li>
                                     <li>
                                         <img src="img/icons/sm/12.svg" alt="icon">
@@ -168,7 +168,7 @@
                                     </li>
                                     <li>
                                         <img src="img/icons/sm/12.svg" alt="icon">
-                                        <span class="mil-dark">Seamless AI/ML model integration.</span>
+                                        <span class="mil-dark">Seamless integration.</span>
                                     </li>
                                     <li>
                                         <img src="img/icons/sm/12.svg" alt="icon">
