--- a/blog1.html
+++ b/blog1.html
@@ -26,7 +26,9 @@
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
-                    <a href="index.html" class="mil-logo" style="width: 140px"></a>
+                    <a href="index.html" class="mil-logo">
+                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 340px; height: 100px;" >
+                    </a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
@@ -211,7 +213,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
+                            <img src="img/logo/logo-light-navi.png" alt="" class="mil-logo mil-mb-30" style="width: 340px">
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
