--- a/coming-soon.html
+++ b/coming-soon.html
@@ -26,7 +26,9 @@
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
-                    <a href="index.html" class="mil-logo" style="width: 140px"></a>
+                    <a href="index.html" class="mil-logo">
+                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 340px; height: 100px;" >
+                    </a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
