--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/navi-logo-light.jpg" alt="NaviPromotion Logo" style="width: 300px; height: 100px;" >
+                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 340px; height: 100px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -1128,7 +1128,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
+                            <img src="img/logo/logo-light-navi.png" alt="" class="mil-logo mil-mb-30" style="width: 340px">
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
