--- a/project3.html
+++ b/project3.html
@@ -142,7 +142,7 @@
                             <h6 class="mil-mb-15">Publishing & Book Sales</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Stack</p>
-                            <h6>React, Node.js, Express.js, MongoDB, SEO Optimization</h6>
+                            <h6>HTML , CSS , Javascript, SEO Optimization</h6>
 
                         </div>
 
