--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <title>ITSulu</title>
+    <title>Navi Promotions - Home</title>
 </head>
 
 <body>
