--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 340px; height: 100px;" >
+                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 350px; height: 130px;"  >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -134,9 +134,8 @@
         <!-- 404 end -->
 
         <div class="mil-addition-bottom">
-            <div class="container-fluid">
-                <p class="mil-text-sm mil-light-soft">© ITSulu 2023.</p>
-                <p class="mil-text-sm mil-light-soft">All Rights Reserved.</p>
+            <div class="container">
+                <p class="mil-text-sm mil-light">© 2025 Navi Promotions. All Rights Reserved.</p>
             </div>
         </div>
 
