--- a/about.html
+++ b/about.html
@@ -632,7 +632,7 @@
                                         <img src="img/images/sathish.jpg" alt="Team member">
                                         <div class="mil-team-circle"></div>
                                     </div>
-                                    <h4 class="mil-mb-10">Sathish</h4>
+                                    <h4 class="mil-mb-10">Sathees Kumar</h4>
                                     <p>Manager</p>
                                 </a>
         
