--- a/other-files/prices.html
+++ b/other-files/prices.html
@@ -27,7 +27,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 350px; height: 130px;" >
+                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 250px; margin-top: 15px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
