--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <title>Navi Promotions - About</title>
 </head>
 
