--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+
     <title>Navi Promotions - Home</title>
 </head>
 
