--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <title>Navi Promotions - 404</title>
 </head>
 
