--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
+    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
