--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Navi Promotions - Privacy Policy</title>
