service page completion

--- a/service-1.html
+++ b/service-1.html
@@ -177,7 +177,7 @@
                     <div class="col-xl-4">
                         <div class="mil-mb-60">
                             <div class="mil-number-icon mil-lines mil-mb-30">
-                                <span>A</span>
+                                <span>01</span>
                             </div>
                             <h4 class="mil-mb-15">Social Media Marketing & Management</h4>
                             <p>Boost your brand’s visibility and engagement with targeted social media strategies and content creation.</p>
@@ -186,7 +186,7 @@
                     <div class="col-xl-4">
                         <div class="mil-mb-60">
                             <div class="mil-number-icon mil-lines mil-mb-30">
-                                <span>B</span>
+                                <span>02</span>
                             </div>
                             <h4 class="mil-mb-15">Search Engine Optimization (SEO)</h4>
                             <p>Optimize your website to rank higher in search results, driving organic traffic and increasing brand authority.</p>
@@ -195,7 +195,7 @@
                     <div class="col-xl-4">
                         <div class="mil-mb-60">
                             <div class="mil-number-icon mil-lines mil-mb-30">
-                                <span>C</span>
+                                <span>03</span>
                             </div>
                             <h4 class="mil-mb-15">Pay-Per-Click (PPC) Advertising</h4>
                             <p>Maximize ROI with data-driven ad campaigns that capture high-intent audiences and drive conversions.</p>
@@ -204,7 +204,7 @@
                     <div class="col-xl-4">
                         <div class="mil-mb-60">
                             <div class="mil-number-icon mil-lines mil-mb-30">
-                                <span>D</span>
+                                <span>04</span>
                             </div>
                             <h4 class="mil-mb-15">Digital Analytics and Reporting</h4>
                             <p>Gain valuable insights with in-depth analytics and reporting to refine marketing efforts and optimize performance.</p>
