--- a/about.html
+++ b/about.html
@@ -31,9 +31,10 @@
         <div class="mil-top-position mil-fixed">
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
+
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 250px; margin-top: 15px;" >
+                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 250px; margin-top: 15px; margin-right: 450px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -44,7 +45,7 @@
                                         <li><a href="home-2.html">Home V2</a></li>
                                         <li><a href="about.html">About us</a></li>
                                         <li><a href="team.html">Team</a></li>
-                                        <li><a href="#.">Team Member</a></li>
+                                        <li><a href="team-single.html">Team Member</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                         <li><a href="prices.html">Prices</a></li>
                                         <li><a href="faq.html">FAQ</a></li>
@@ -112,20 +113,21 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg mil-dark-bg" >
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About us</a></li>
+                        <li><a href="service-1.html">Service</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Enterprise Solutions for Digital Growth</h2>
+                    <h2 class="mil-uppercase">Services</h2>
                 </div>
             </div>
         </div>
         <!-- banner end -->
+
 
         <!-- call to action -->
         <section class="mil-p-120-90">
@@ -794,7 +796,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 350px; margin-top: 15px;" >
+                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
