--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
                                 <div class="col-lg-12">
                                     <div class="mil-input-frame mil-dark-input mil-mb-30">
                                         <label class="mil-h6"><span>Message</span></label>
-                                        <textarea name="message" required placeholder="Your message"></textarea>
+                                        <textarea name="message" required placeholder="Your message" style="height: 100px;"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -258,8 +258,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 350px; margin-top: 15px;" >
-
+                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
