--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="mil-hover-card">
-                                        <h5 class="mil-mb-30">Social Media Marketing & Management</h5>
+                                        <h5 class="mil-mb-30">Social Media Marketing</h5>
                                         <p class="mil-mb-50">Enhance your brand’s presence with expert social media strategies.</p>
                                         <div class="mil-divider mil-divider-left mil-mb-50"></div>
                                         <ul class="mil-simple-list mil-mb-50">
@@ -972,7 +972,7 @@
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
+                                        <!-- <li><i class="fas fa-star"></i></li> -->
                                     </ul>
                                 </div>
                                 <p class="mil-mb-30">Their digital marketing strategies helped us generate more leads and increase our conversion rate significantly. Highly recommend their expertise!</p>
@@ -1020,7 +1020,7 @@
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
+                                        <!-- <li><i class="fas fa-star"></i></li> -->
                                     </ul>
                                 </div>
                                 <p class="mil-mb-30">We needed a custom software solution, and the development team delivered beyond our expectations. The software is seamless, efficient, and scalable!</p>
@@ -1044,7 +1044,7 @@
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
+                                        <!-- <li><i class="fas fa-star"></i></li> -->
                                     </ul>
                                 </div>
                                 <p class="mil-mb-30">Their video editing team produced high-quality promotional videos that perfectly captured our brand’s message. Engaging, professional, and visually stunning!</p>
@@ -1132,7 +1132,7 @@
                         <div class="col-xl-4 mil-mb-30">
 
                             
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 350px; margin-top: 15px;" >
+                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
