--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 250px; margin-top: 15px;" >
+                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 250px; margin-top: 20px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -512,7 +512,7 @@
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Xenex Fiberglass Engineering</h4>
+                                        <h4 class="mil-mb-20">Xenex Engineering & Process Pte Ltd</h4>
                                         <!-- <h6>by: <span class="mil-accent">Nguta Ithya</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
@@ -1132,7 +1132,7 @@
                         <div class="col-xl-4 mil-mb-30">
 
                             
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 350px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
