--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
                     <div class="col-xl-5 mil-mb-60">
 
                         <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Innovative solutions for fiberglass engineering.</span>
-                        <h3 class="mil-mb-30">Web Application for Xenex Fiberglass Engineering</h3>
+                        <h3 class="mil-mb-30">Web Application for Xenex Engineering & Process Pte Ltd</h3>
                         <a href="project2.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
