--- a/about.html
+++ b/about.html
@@ -120,9 +120,9 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="service-1.html">Service</a></li>
+                        <li><a href="service-1.html">About Us</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Services</h2>
+                    <h2 class="mil-uppercase">About Us</h2>
                 </div>
             </div>
         </div>
@@ -320,17 +320,17 @@
                         <ul class="nav nav-tabs mil-mb-30">
                             <li class="active">
                                 <a data-toggle="tab" href="#mission" class="mil-link">
-                                    <i class="fas fa-bullseye"></i> Mission
+                                     Mission
                                 </a>
                             </li>
                             <li>
                                 <a data-toggle="tab" href="#vision" class="mil-link">
-                                    <i class="fas fa-eye"></i> Vision
+                                    Vision
                                 </a>
                             </li>
                             <li>
                                 <a data-toggle="tab" href="#goals" class="mil-link">
-                                    <i class="fas fa-flag-checkered"></i> Goals
+                                    Goals
                                 </a>
                             </li>
                         </ul>
@@ -869,6 +869,8 @@
         <!-- footer end -->
     </div>
     <!-- wrapper end -->
+
+    
 
     <!-- jQuery js -->
     <script src="js/plugins/jquery.min.js"></script>
