--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 350px; height: 130px;"  >
+                        <img src="img/logo/logo-light-navi.png" alt="NaviPromotion Logo" style="width: 300px; margin-top: 10px;">
                     </a>
                     <div class="mil-navigation">
                         <nav>
