--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px; margin-top: 10px; margin-right: 450px;" >
+                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -211,7 +211,7 @@
                                 <a href="#." class="mil-post-sm mil-mb-60">
                                     <div class="mil-cover-frame"><img src="img/images/vishnu.jpg" alt="cover"></div>
                                     <div class="mil-description">
-                                        <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
+                                        <h5 class="mil-font-3 mil-accent">Naga Vishnu</h5>
                                         <p class="mil-text-sm">CEO & Founder</p>
                                     </div>
                                 </a>
@@ -870,6 +870,26 @@
     </div>
     <!-- wrapper end -->
 
+
+    <script>
+
+        window.addEventListener("scroll", function () {
+            var logo = document.getElementById("logo");
+            var topPanel = document.querySelector(".mil-top-panel");
+
+            if (window.scrollY > 50) {
+                logo.src = "img/logo/fixed-logo.png";
+                logo.style.margin = "0";  
+                logo.style.padding = "0";
+                topPanel.classList.add("scrolled"); 
+            } else {
+                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.style.marginTop = "10px";  
+                topPanel.classList.remove("scrolled");
+            }
+        });
+
+    </script>
     
 
     <!-- jQuery js -->
