--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                                     <!-- <img src="img/faces/1.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Arun Kumar</h6>
-                                        <span class="mil-text-sm">Agency Design</span>
+                                        <span class="mil-text-sm">Manager</span>
                                     </div>
                                 </div>
                             </div>
@@ -980,7 +980,7 @@
                                     <!-- <img src="img/faces/2.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Priya Sharma</h6>
-                                        <span class="mil-text-sm">Agency Design</span>
+                                        <span class="mil-text-sm">CEO</span>
                                     </div>
                                 </div>
                             </div>
@@ -1004,7 +1004,7 @@
                                     <!-- <img src="img/faces/3.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Rahul Verma</h6>
-                                        <span class="mil-text-sm">Agency Design</span>
+                                        <span class="mil-text-sm">Operation Executive</span>
                                     </div>
                                 </div>
                             </div>
@@ -1028,7 +1028,7 @@
                                     <!-- <img src="img/faces/4.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Suresh Balan</h6>
-                                        <span class="mil-text-sm">Agency Design</span>
+                                        <span class="mil-text-sm">Chief Manager</span>
                                     </div>
                                 </div>
                             </div>
@@ -1052,7 +1052,7 @@
                                     <!-- <img src="img/faces/2.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Meera Iyer</h6>
-                                        <span class="mil-text-sm">Agency Design</span>
+                                        <span class="mil-text-sm">Marketing Manager</span>
                                     </div>
                                 </div>
                             </div>
